--- a/src/app/hero-search/hero-search.component.html
+++ b/src/app/hero-search/hero-search.component.html
@@ -2,6 +2,11 @@
   <label for="search-box">Hero Search</label>
   <input #searchBox id="search-box" (input)="search(searchBox.value)" />
 
+  <mat-form-field appearance="fill">
+    <mat-label>Input</mat-label>
+    <input matInput />
+  </mat-form-field>
+
   <ul class="search-result">
     <li *ngFor="let hero of heroes$ | async">
       <a routerLink="/detail/{{ hero.id }}">
