--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,12 @@
 <h2>Top Heroes</h2>
 
 <div class="heroes-menu">
-  <a *ngFor="let hero of heroes" routerLink="/detail/{{ hero.id }}">
+  <a
+    mat-raised-button
+    color="primary"
+    *ngFor="let hero of heroes"
+    routerLink="/detail/{{ hero.id }}"
+  >
     {{ hero.name }}
   </a>
 </div>
