--- a/src/app/hero-search/hero-search.component.html
+++ b/src/app/hero-search/hero-search.component.html
@@ -10,10 +10,14 @@
   />
 </mat-form-field>
 
-<ul class="search-result">
-  <li *ngFor="let hero of heroes$ | async">
-    <a routerLink="/detail/{{ hero.id }}">
+<mat-nav-list>
+  <mat-list-item
+    *ngFor="let hero of heroes$ | async"
+    routerLink="/detail/{{ hero.id }}"
+  >
+    <a mat-raised-button color="primary"> Show Details </a>
+    <h3 matLine>
       {{ hero.name }}
-    </a>
-  </li>
-</ul>
+    </h3>
+  </mat-list-item>
+</mat-nav-list>
