--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -17,18 +17,30 @@
 </form>
 
 <h2>My Heroes</h2>
-<ul class="heroes">
-  <li *ngFor="let hero of heroes">
-    <a routerLink="/detail/{{ hero.id }}">
-      <span class="badge">{{ hero.id }}</span> {{ hero.name }}
+
+<mat-nav-list>
+  <mat-list-item *ngFor="let hero of heroes" routerLink="/detail/{{ hero.id }}">
+    <span matLine>
+      <h3>
+        {{ hero.name }}
+      </h3>
+    </span>
+    <a
+      mat-raised-button
+      color="primary"
+      matBadge="{{ hero.id }}"
+      matBadgePosition="before"
+    >
+      Show Details
     </a>
     <button
+      mat-mini-fab
+      color="warn"
       type="button"
-      class="delete"
       title="delete hero"
       (click)="delete(hero)"
     >
-      x
+      <mat-icon>delete</mat-icon>
     </button>
-  </li>
-</ul>
+  </mat-list-item>
+</mat-nav-list>
