--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,7 +1,12 @@
-<div *ngIf="messageService.messages.length">
+<div>
   <h2>Messages</h2>
-  <button type="button" class="clear" (click)="messageService.clear()">
+
+  <button mat-raised-button type="button" (click)="messageService.clear()">
     Clear messages
   </button>
-  <div *ngFor="let message of messageService.messages">{{ message }}</div>
+  <mat-list>
+    <mat-list-item *ngFor="let message of messageService.messages">
+      {{ message }}
+    </mat-list-item>
+  </mat-list>
 </div>
