--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -4,9 +4,12 @@
   <button mat-raised-button type="button" (click)="messageService.clear()">
     Clear messages
   </button>
-  <mat-list>
-    <mat-list-item *ngFor="let message of messageService.messages">
-      {{ message }}
-    </mat-list-item>
-  </mat-list>
+
+  <cdk-virtual-scroll-viewport itemSize="50" class="example-viewport">
+    <mat-list>
+      <mat-list-item *cdkVirtualFor="let message of messageService.messages">
+        {{ message }}
+      </mat-list-item>
+    </mat-list>
+  </cdk-virtual-scroll-viewport>
 </div>
