--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
   <a
     mat-raised-button
     color="primary"
-    *ngFor="let hero of heroes"
+    *ngFor="let hero of heroes$ | async"
     routerLink="/detail/{{ hero.id }}"
   >
     {{ hero.name }}
