--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,5 +17,7 @@
 </nav>
 
 <mat-tab-nav-panel #tabPanel>
-  <router-outlet></router-outlet>
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
 </mat-tab-nav-panel>
