--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,10 +1,27 @@
 <div *ngIf="hero">
-  <h2>{{ hero.name | uppercase }} Details</h2>
-  <div><span>id: </span>{{ hero.id }}</div>
   <div>
-    <label for="hero-name">Hero name: </label>
-    <input id="hero-name" [(ngModel)]="hero.name" placeholder="name" />
+    <button mat-raised-button type="button" (click)="goBack()">
+      <mat-icon>arrow_back</mat-icon>
+      Go Back
+    </button>
   </div>
-  <button type="button" (click)="goBack()">go back</button>
-  <button type="button" (click)="save()">save</button>
+  <h2>{{ hero.name | uppercase }} Details</h2>
+  <div>
+    <mat-form-field appearance="fill">
+      <mat-label>Hero id: </mat-label>
+      <input matInput [(ngModel)]="hero.id" readonly />
+    </mat-form-field>
+  </div>
+  <div>
+    <mat-form-field appearance="fill">
+      <mat-label>Hero name: </mat-label>
+      <input matInput [(ngModel)]="hero.name" placeholder="Hero name" />
+    </mat-form-field>
+  </div>
+  <button mat-raised-button type="button" color="accent" (click)="save()">
+    <mat-icon>save</mat-icon>
+    Save
+  </button>
 </div>
+
+<p *ngIf="!hero">Hero not found.</p>
