--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar fxLayoutAlign="space-between center">
   <h1>{{ title }}</h1>
-  <button mat-icon-button (click)="openMessagesDialog()">
+  <button mat-icon-button (click)="openLogDialog()">
     <mat-icon> messages </mat-icon>
   </button>
 </mat-toolbar>
