--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -24,7 +24,7 @@
   Refresh
 </button>
 
-<div *ngIf="this.loadingService.getLoadIndicator(loadIndicator)">
+<div *ngIf="isLoading">
   <p>Loading...</p>
 </div>
 
