--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <h2>Top Heroes</h2>
 
 <div *ngIf="isLoading$ | async">
-  <p>Loading...</p>
+  <p><mat-spinner mode="indeterminate"></mat-spinner></p>
 </div>
 
 <div fxLayoutAlign="start center" fxLayoutGap="1em">
