--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -20,7 +20,7 @@
 <h2>My Heroes</h2>
 
 <div *ngIf="isLoading$ | async">
-  <p>Loading...</p>
+  <p><mat-spinner mode="indeterminate"></mat-spinner></p>
 </div>
 
 <mat-nav-list>
