Update centered spinners

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <h2>Top Heroes</h2>
 
-<div *ngIf="isLoading$ | async">
+<div fxLayoutAlign="center center" *ngIf="isLoading$ | async">
   <p><mat-spinner mode="indeterminate"></mat-spinner></p>
 </div>
 
