--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -19,7 +19,7 @@
 
 <h2>My Heroes</h2>
 
-<div *ngIf="isLoading$ | async">
+<div fxLayoutAlign="center center" *ngIf="isLoading$ | async">
   <p><mat-spinner mode="indeterminate"></mat-spinner></p>
 </div>
 
